# 3dinfo

./: .gitignore  AUTHORS  Makefile.am  Makefile.common  README  configure.ac
glew/: glew.h
m4/: ax_check_sdl.m4
src/: 3dinfo.cpp  Makefile.am  capability.cpp  capability.h
